# jp_speech_eval_project

./: .dockerignore  .gitignore  Dockerfile  README.md
ver1.3/: README.md  pyproject.toml  requirements.txt
ver1.3/configs/: scoring_config.json  special_mora_manual_inspection_schema.json  special_mora_manual_inspection_schema_v2.json  special_mora_threshold_profiles.json  special_mora_thresholds_v2.json  tts_config.json
ver1.3/data/: calibration_sentences_ja.json  eval_test_cases.json  prosody_minimal_pairs.json
ver1.3/debug_ui/: index.html
ver1.3/docs/: asr_kanade_product_flow.md  evaluation_infrastructure.md  mfa_alignment_setup.md  non_reference_realtime_strategy.md  ojad_integration.md  pipeline_api.md  theory_basis.md
ver1.3/reports/: alignment_backend_comparison.md  alignment_resource_audit.md  calibration_coverage.md  janon_l2_trend_report.md  janon_special_mora_trend_report.md  jvs_native_sanity_check.md  manual_inspection_guideline_v2.md  rhythm_fluency_threshold_update.md  runtime_special_mora_counterfactual_sensitivity.md  runtime_special_mora_janon_shadow_trend.md  runtime_special_mora_janon_shadow_trend_v2.md  runtime_special_mora_jvs_validation.md  runtime_special_mora_jvs_validation_v2.md  runtime_special_mora_profile_validation.md  runtime_special_mora_shadow_report.md  sokuon_coverage_report.md  special_mora_alignment_calibration_report.md  special_mora_calibration_report.md  special_mora_false_alarm_analysis.md  special_mora_feature_definition_audit.md  special_mora_manual_annotation_summary.md  special_mora_manual_inspection_pack.md  (+9 more)
(+111 files in other folders)
